objects/SVMXC__Service_Order__c.object
<CustomObject>
    <fields>
        <fullName>SVMXC__Canceled_Date_Time__c</fullName>
        <description>Date and time when technician rejects or cancels or dispatcher cancels the work order</description>
        <inlineHelpText>Date and time when technician rejects or cancels or dispatcher cancels the work order</inlineHelpText>
        <label>Canceled Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Support Case from which this service order originated. Is a lookup to an existing salesforce case record</description>
        <inlineHelpText>Support Case from which this service order originated. Is a lookup to an existing salesforce case record</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Service_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__City__c</fullName>
        <description>“City” part of the work order location.</description>
        <inlineHelpText>“City” part of the work order location.</inlineHelpText>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Clock_Paused_Forever__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clock Paused Forever</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Closed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that closed this service order. Is a lookup to an existing salesforce user.</description>
        <inlineHelpText>User that closed this service order. Is a lookup to an existing salesforce user.</inlineHelpText>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Service_Order_Closed_By</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Closed_On__c</fullName>
        <description>Date/time when this service order was closed.</description>
        <inlineHelpText>Date/time when this service order was closed.</inlineHelpText>
        <label>Closed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Customer Account initiating this service order. Is a lookup to an existing salesforce account record</description>
        <inlineHelpText>Customer Company initiating this service order. Is a lookup to an existing salesforce account record</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Service_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Completed_Date_Time__c</fullName>
        <description>Date and time when technician completes (closes) the work order</description>
        <inlineHelpText>Date and time when technician completes (closes) the work order</inlineHelpText>
        <label>Completed Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Component__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Serial number of the component for which the customer is seeking support. Is a lookup to an existing installed product record in ServiceMax</description>
        <inlineHelpText>Installed Product</inlineHelpText>
        <label>Component</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipName>Service_Order_Component</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Configuration_After__c</fullName>
        <description>Snapshot of the product’s technical details after the engineer(s) resolved/addressed the issue</description>
        <inlineHelpText>Snapshot of the product’s technical details after the engineer(s) resolved/addressed the issue</inlineHelpText>
        <label>Configuration - After</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Configuration_Before__c</fullName>
        <description>Snapshot of the product’s technical details before the engineer(s) started addressing it</description>
        <inlineHelpText>Snapshot of the product’s technical details before the engineer(s) started addressing it</inlineHelpText>
        <label>Configuration - Before</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the contact person from the customer account for this service order. Is a lookup to an existing salesforce contact record</description>
        <inlineHelpText>Name of the contact person from the customer account for this service order. Is a lookup to an existing salesforce contact record</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Service_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Corrective_Action__c</fullName>
        <description>Any corrective action taken by your engineer(s) to address the customer feedback</description>
        <inlineHelpText>Any corrective action taken by your engineer(s) to address the customer feedback</inlineHelpText>
        <label>Corrective Action</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Country__c</fullName>
        <description>“Country” part of the work order location</description>
        <inlineHelpText>“Country” part of the work order location</inlineHelpText>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Ayerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia</fullName>
                </value>
                <value>
                    <fullName>Bouvet</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Brazil</fullName>
                </value>
                <value>
                    <fullName>British Indian Ocean Territory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Customer_Down_Status__c</fullName>
        <description>Indicates as Yes or No if this work order is about a customer down situation.</description>
        <formula>IF (SVMXC__Customer_Down__c = true, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <inlineHelpText>Indicates as Yes or No if this work order is about a customer down situation.</inlineHelpText>
        <label>Customer Down Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Customer_Down__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the customer situation is critical affecting uptime due to the problem reported</description>
        <inlineHelpText>If the customer situation is critical affecting uptime due to the problem reported</inlineHelpText>
        <label>Customer Down</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Customer_Failure_Feedback__c</fullName>
        <description>Feedback given by the customer about the overall failure event and how your organization responded</description>
        <inlineHelpText>Feedback given by the customer about the overall failure event and how your organization responded</inlineHelpText>
        <label>Customer Failure Feedback</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Dependency_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependency Group</label>
        <referenceTo>SVMXC__Dependency_Management__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Dispatch_Now__c</fullName>
        <label>Dispatch Now</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes with Delay</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Dispatch_Priority__c</fullName>
        <description>Work order priority bucket as defined in the dispatch process. Calculated automatically</description>
        <label>Dispatch Priority</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Dispatch_Process__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dispatch process using which this work order will be scheduled</description>
        <label>Dispatch Process</label>
        <referenceTo>SVMXC__ServiceMax_Processes__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Service_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Dispatch_Response__c</fullName>
        <description>To capture the response of the technician whether he/she accepts or rejects the work order assigned.</description>
        <inlineHelpText>To capture the response of the technician whether he/she accepts or rejects the work order assigned.</inlineHelpText>
        <label>Dispatch Response</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Dispatch_Status__c</fullName>
        <description>Indicates in which stage the work order is in.</description>
        <formula>IF(AND( SVMXC__Service_Group__c=null , SVMXC__Group_Member__c =null),&quot;New&quot;, IF(AND( SVMXC__Service_Group__c&lt;&gt;null , SVMXC__Group_Member__c =null),&quot;Queued&quot;,IF(SVMXC__Group_Member__c &lt;&gt;null,&quot;Assigned&quot;,&apos;New&apos;)))</formula>
        <inlineHelpText>Indicates in which stage the work order is in.</inlineHelpText>
        <label>Dispatch Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Drip__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate whether the Work Order is ready to be delivered to mobile application</description>
        <inlineHelpText>Flag to indicate whether the Work Order is ready to be delivered to mobile application</inlineHelpText>
        <label>Drip</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Driving_Time__c</fullName>
        <label>Driving Time (in Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__EndpointURL__c</fullName>
        <description>Not used</description>
        <formula>$Api.Enterprise_Server_URL_70</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EndpointURL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Entitlement_Notes__c</fullName>
        <description>Entitlement Notes</description>
        <label>Entitlement Notes</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Entitlement_Type__c</fullName>
        <label>Entitlement Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUTO</fullName>
                </value>
                <value>
                    <fullName>INTERACTIVE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Failed_Assembly__c</fullName>
        <description>The assembly of your product that failed.</description>
        <inlineHelpText>The assembly of your product that failed.</inlineHelpText>
        <label>Failed Assembly</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample Value1</fullName>
                </value>
                <value>
                    <fullName>Sample Value2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Failure_Location__c</fullName>
        <description>Where the product failed, field or depot</description>
        <inlineHelpText>Where the product failed, field or depot</inlineHelpText>
        <label>Failure Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Field</fullName>
                </value>
                <value>
                    <fullName>Floor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Finished_Onsite_Date_Time__c</fullName>
        <description>Date and time when technician finishes working on the work order at site</description>
        <inlineHelpText>Date and time when technician finishes working on the work order at site</inlineHelpText>
        <label>Finished Onsite Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__FirstScheduledDateTime__c</fullName>
        <description>Datetimestamp the work order was scheduled to a technician for the very first time.</description>
        <inlineHelpText>Datetimestamp the work order was scheduled to a technician for the very first time.</inlineHelpText>
        <label>First Scheduled DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__First_Assigned_DateTime__c</fullName>
        <description>Datetimestamp the work order was assigned to a technician for the very first time.</description>
        <inlineHelpText>Datetimestamp the work order was assigned to a technician for the very first time.</inlineHelpText>
        <label>First Assigned DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__First_Queued_DateTime__c</fullName>
        <description>Datetimestamp the work order was queued to a technician for the very first time.</description>
        <inlineHelpText>Datetimestamp the work order was queued to a technician for the very first time.</inlineHelpText>
        <label>First Queued DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Group_Email__c</fullName>
        <description>Stores the email address associated with the service team. Sends email using workflow rule indicating an work order has been queued to the service team.</description>
        <inlineHelpText>Stores the email address associated with the service team. Sends email using workflow rule indicating an work order has been queued to the service team.</inlineHelpText>
        <label>Group Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SVMXC__Group_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the group member working on the service order. This does not imply that this member has the ownership of service order record</description>
        <inlineHelpText>Name of the group member working on the service order. This does not imply that this member has the ownership of service order record</inlineHelpText>
        <label>Technician</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Service_Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__How_Fixed__c</fullName>
        <description>Type of fix that was applied to resolve the problem.</description>
        <inlineHelpText>Type of fix that was applied to resolve the problem.</inlineHelpText>
        <label>How Fixed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sample Value1</fullName>
                </value>
                <value>
                    <fullName>Sample Value2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Idle_Time__c</fullName>
        <description>Idle Time (in Minutes)</description>
        <inlineHelpText>Idle Time (in Minutes)</inlineHelpText>
        <label>Idle Time (in Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Initial_Response_Customer_By__c</fullName>
        <description>Date/time by which initial response should be delivered as per customer commitment in SLA. Calculated automatically</description>
        <label>Initial Response Customer By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Initial_Response_Internal_By__c</fullName>
        <description>Date/time by which customer should be initial responsed as per internal commitment in SLA.</description>
        <label>Initial Response Internal By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Invoice_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invoice Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Invoice_Number__c</fullName>
        <label>Invoice Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__IsPartnerRecord__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates that this work order is for/by a Partner.</description>
        <inlineHelpText>Flag indicates that this work order is for/by a Partner.</inlineHelpText>
        <label>IsPartnerRecord</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__IsPartner__c</fullName>
        <description>Flag is the indication of Partner Record.</description>
        <formula>IF(  SVMXC__IsPartnerRecord__c  ,&quot;True&quot;, &quot;False&quot;)</formula>
        <inlineHelpText>Flag is the indication of Partner Record.</inlineHelpText>
        <label>Is Partner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_Entitlement_Performed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Entitlement Performed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_Exported__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to indicate whether this record is exported.</description>
        <label>Is Exported</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_PM_Work_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this is a preventive maintenance work order or not. Set automatically by PM scheduler</description>
        <label>Is PM Work Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_SLA_Calculated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculate SLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Is_Service_Covered__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Service Covered</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Last_Dispatch_Event__c</fullName>
        <description>Indicates various stages of an work order. Used to trigger various dispatch console workflows.</description>
        <inlineHelpText>Indicates various stages of an work order. Used to trigger various dispatch console workflows.</inlineHelpText>
        <label>Last Dispatch Event</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Worked</fullName>
                </value>
                <value>
                    <fullName>Queued</fullName>
                </value>
                <value>
                    <fullName>UnQueued</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>UnScheduled</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>UnAssigned</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Latitude__c</fullName>
        <description>Latitude for the work order service location</description>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Locked_By_DC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Locked By DC</description>
        <inlineHelpText>Locked By DC</inlineHelpText>
        <label>Locked By DC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Longitude__c</fullName>
        <description>Longitude for the work order service location</description>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Master_Order_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Order Line</label>
        <referenceTo>SVMXC__RMA_Shipment_Line__c</referenceTo>
        <relationshipLabel>Work Orders</relationshipLabel>
        <relationshipName>Work_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Member_Email__c</fullName>
        <description>Stores the email address of the technician. Used to send a email through workflow rule indicating an work order has been assigned/scheduled.</description>
        <inlineHelpText>Stores the email address of the technician. Used to send a email through workflow rule indicating an work order has been assigned/scheduled.</inlineHelpText>
        <label>Member Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SVMXC__NoOfTimesAssigned__c</fullName>
        <description>Indicating number of times the work order was assigned</description>
        <inlineHelpText>Indicating number of times the work order was assigned</inlineHelpText>
        <label>No Of Times Assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__NoOfTimesQueued__c</fullName>
        <description>Indicates number of times the work order was queued</description>
        <inlineHelpText>Indicates number of times the work order was queued</inlineHelpText>
        <label>No Of Times Queued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__NoOfTimesScheduled__c</fullName>
        <description>Indicates number of times the work order was scheduled</description>
        <inlineHelpText>Indicates number of times the work order was scheduled</inlineHelpText>
        <label>No Of Times Scheduled</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SVMXC__Number_Of_Times_Assigned_Bucket__c</fullName>
        <description>Number of times the work order was assigned bucket. This is used for reporting purpose.</description>
        <formula>IF ( SVMXC__NoOfTimesAssigned__c &lt;=2, &quot;Less Than 2 Times&quot;, IF ( SVMXC__NoOfTimesAssigned__c &lt;= 6, &quot;2 To 6 Times&quot;, IF ( SVMXC__NoOfTimesAssigned__c &lt;= 10, &quot;6 to 10 Times&quot;, &quot;Over 10 Times&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of times the work order was assigned bucket. This is used for reporting purpose.</inlineHelpText>
        <label>Number Of Times Assigned Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Number_Of_Times_Queued_Bucket__c</fullName>
        <description>Number of times the work order was queued bucket. This is used for reporting purpose.</description>
        <formula>IF ( SVMXC__NoOfTimesQueued__c &lt;=2, &quot;Less Than 2 Times&quot;, IF ( SVMXC__NoOfTimesQueued__c &lt;= 6, &quot;2 To 6 Times&quot;, IF ( SVMXC__NoOfTimesQueued__c &lt;= 10, &quot;6 to 10 Times&quot;, &quot;Over 10 Times&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of times the work order was queued bucket. This is used for reporting purpose.</inlineHelpText>
        <label>Number Of Times Queued Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Number_Of_Times_Scheduled_Bucket__c</fullName>
        <description>Number of times the work order was scheduled bucket. This is used for reporting purpose.</description>
        <formula>IF ( SVMXC__NoOfTimesScheduled__c &lt;=2, &quot;Less Than 2 Times&quot;, IF ( SVMXC__NoOfTimesScheduled__c &lt;= 6, &quot;2 To 6 Times&quot;, IF ( SVMXC__NoOfTimesScheduled__c &lt;= 10, &quot;6 to 10 Times&quot;, &quot;Over 10 Times&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Number of times the work order was scheduled bucket. This is used for reporting purpose.</inlineHelpText>
        <label>Number Of Times Scheduled Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Onsite_Response_Customer_By__c</fullName>
        <description>Date/time by which onsite response should be delivered as per customer commitment in SLA. Calculated automatically</description>
        <label>Onsite Response Customer By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Onsite_Response_Internal_By__c</fullName>
        <description>Date/time by which customer should be onsite responsed as per internal commitment in SLA.</description>
        <label>Onsite Response Internal By</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__OptiMax_Error_Email1__c</fullName>
        <description>Email address copied from global settings. Can be used to send pre-calculation failures</description>
        <label>OptiMax Error Email1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SVMXC__OptiMax_Error_Email2__c</fullName>
        <description>Email address copied from dispatch process. Can be used to send pre-calculation failures</description>
        <label>OptiMax Error Email2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SVMXC__OptiMax_Error_Occurred__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if an error occurred when performing pre-calculations for OptiMax</description>
        <label>OptiMax Error Occurred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__OptiMax_Error_Text__c</fullName>
        <description>Details of error occurred when performing pre-calculations for OptiMax</description>
        <label>OptiMax Error Text</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__OptiMax_Last_Run_Time__c</fullName>
        <description>Last time the work order processed by OptiMax</description>
        <label>OptiMax Last Run Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__OptiMax_Status__c</fullName>
        <description>OptiMax dispatch status for the work order</description>
        <label>OptiMax Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Optimizer_Connection_Name__c</fullName>
        <description>This field stores the Connection Instance Name.</description>
        <label>Optimizer Connection Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Order_Status__c</fullName>
        <description>Current status of the service order</description>
        <inlineHelpText>Current status of the service order</inlineHelpText>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Future Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>